# coverage-guided-pbt

./: CHANGELOG.md  README-unprocessed.md  README.md  SEE_ALSO.md  TODO.md  coverage-driven-pbt.cabal  coverage-guided-pbt.cabal  shell.nix
.github/workflows/: main.yaml
src/: Checker.hs  Coverage.hs  Generate.hs  Generator.hs  Mutator.hs  Queue.hs  QuickCheckV1.hs  Shrinker.hs  Statistics.hs  Test.hs
src/Example/: Bad.hs  Counter.hs  Device.hs  GuessGame.hs
src/Generate/: Tree.hs
