cabal-version:   3.0
name:            coverage-driven-pbt
version:         0.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan A
maintainer:      stevana@users.noreply.github.com

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Example.Counter
    Example.GuessGame
    Generate
    Generate.Tree
    Statistics
    Test

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base        ^>=4.20.0.0
    , containers
    , random

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base                 ^>=4.20.0.0
    , coverage-driven-pbt
