cabal-version:   3.0
name:            coverage-guided-pbt
version:         0.0.0

-- synopsis:
-- description:
license:         BSD-2-Clause
license-file:    LICENSE
author:          Stevan A
maintainer:      stevana@users.noreply.github.com

-- copyright:
category:        Testing
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Checker
    Coverage
    Example.Bad
    Example.Counter
    Example.Device
    Example.GuessGame
    Generator
    Mutator
    Queue
    QuickCheckV1
    Shrinker
    Statistics
    Test

  build-depends:
    , base        >=4.17.0.0
    , containers
    , random
    , time

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite test
  import:           warnings
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base
    , coverage-guided-pbt
